# zabbrev

./: Cargo.toml  README.md  example.zabbrev.yaml
src/config/: abbrev.rs  config_path.rs  mod.rs
src/expand/: mod.rs
src/init/: mod.rs  zabbrev-bindkey.zsh  zabbrev-init.zsh  zabrze-init.zsh
src/list/: mod.rs
