[package]
name = "zabbrev"
version = "0.1.4"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = 'ZSH abbreviation exapansion plugin'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/a_happin/zabrze'
keywords = [
    'zsh',
    'zsh-plugin',
]
edition = '2018'

[dependencies]
ansi_term = "0.12"
dirs = "3.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shell-escape = "0.1"
structopt = "0.3"
thiserror = "1.0"
