[package]
name = "zabbrev"
version = "0.2.0"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = 'ZSH abbreviation exapansion plugin'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/a_happin/zabrze'
keywords = [
    'zsh',
    'zsh-plugin',
]
edition = '2018'

[dependencies]
ansi_term = "0.12.1"
dirs = "4.0.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
shell-escape = "0.1.5"
structopt = "0.3.26"
thiserror = "1.0.30"
